Fixed card spacing issues

--- a/_sass/layouts/_post.scss
+++ b/_sass/layouts/_post.scss
@@ -1,5 +1,5 @@
 .post__article {
-  p {
+  > p {
     margin-bottom: var(--size-100);
   }
 }
