--- a/_sass/utilities/_utility-classes.scss
+++ b/_sass/utilities/_utility-classes.scss
@@ -15,10 +15,6 @@
   );
 }
 
-.color-toggle {
-  cursor: pointer;
-}
-
 // LAYOUT
 .flex {
   display: flex;
@@ -110,4 +106,8 @@
   background: var(--clr-tbl-accent);
   padding: var(--size-100);
   border-radius: 8px;
+
+  h1 {
+    margin-top: 0;
+  }
 }
